v5.4
- added patch related buttons to the toolbar
- added LM back and forward buttons
- added throw block bumper block
- added safety mechanism to the retry system for clearing CP
- documentation updates
- fix monty mole display and descriptions

v5.3
- fix FreeRAM conflict between ExNSTL and turnaround patch
- update FreeRAM documentation
- make springboard fixes patch ram-toggleable (midairs are back)
- fix usertoolbar actions hiding Callisto output
- README updates; new page about initialization

v5.2
- add new "Baserom Basics" documentation
- other README edits
- README now has an online component.
- added statusbar toggle uberasm to library
- added RAM-toggled spin jump fireballs patch
- reconfigure Retry prompt tile address settings
- drop unneeded "Free Up 69" patch
- fixed P-Switch spawning from custom question blocks
- added goal point reward fix patch

v5.1
- fix small issue in the usertoolbar
- update Callisto to 0.2.9
- update to Lunar Magic 3.40
- fix incorrect tile in retry settings

v5.0
- new Callisto-based workflow Baserom
- entirely revamped uberasm objects system
- rewrote all documentation in html
- initialization script is now in Powershell
- updated ExGraphics and Map16
- leaner baserom overall
- tidied up block code
- major tool updates to UberASMTool 2.0 and AddMusicK 1.0.9