@@ -1,20 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Demo Level - Romhack Races Baserom</title>
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="./img/flop.gif" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body>
-<section>
-<a href="./index.html" class="home">🏠</a>
-<h2>Demo Level</h2>
-<p>The baserom has a demo level inserted into <code>105</code> so it's seen right when you open Lunar Magic. This level is normally Yoshi's Island 1 but that has been moved to the unused level <code>112</code>.</p>
-<p>The demo level is designed to present the some of custom resources included in the baserom, display a block legend, and give short bits of advice for constructing your level.</p>
-<p>You can see an image capture of the level below but it is also playable and accessible on the Overworld on a path that goes up from Yoshi's House so you can try it for yourself.</p>
-<a href="./img/DemoLevel.png" target="_blank"><img src="img/DemoLevel.png"></a>
-</section>
-</body>
-</html>
