@@ -1,0 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Baserom Levels - Romhack Races Baserom</title>
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="./img/flop.gif" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+<body>
+<section>
+<a href="./index.html" class="home">🏠</a>
+<h2>Baserom Levels</h2>
+<h3>Info Level</h3>
+<p>The baserom makes use of level <code>105</code> to display a bunch of information about the baserom so it's seen right when you open Lunar Magic. This level is normally Yoshi's Island 1 but that has been moved to the unused level <code>112</code>.</p>
+<a href="./img/InfoLevel.png" target="_blank"><img src="img/InfoLevel.png"></a>
+<h3>Demo Level</h3>
+<p>A demo level is designed to present the some of custom resources is also included in the baserom, and is accessible both in ROM at level <code>13B</code> and from the Overworld by going up from Yoshi's House so you can try it for yourself.</p>
+<a href="./img/DemoLevel.png" target="_blank"><img src="img/DemoLevel.png"></a>
+</section>
+</body>
+</html>
