@@ -25,12 +25,12 @@
 <p>For more information about what's included in the baserom or how to use some of the resources, check out some of the links below.</p>
 <ul>
     <li><a href="./Blocks.html">Blocks</a></li>
-    <li><a href="./Demo Level.html">Demo Level</a></li>
     <li><a href="./Directories.html">Directories</a></li>
     <li><a href="./ExAnimation.html">ExAnimation</a></li>
     <li><a href="./FreeRAM.html">FreeRAM</a></li>
     <li><a href="./Graphics.html">Graphics</a></li>
     <li><a href="./Initialization.html">Initialization</a></li>
+    <li><a href="./Levels.html">Baserom Levels</a></li>
     <li><a href="./Map16.html">Map16</a></li>
     <li><a href="./Patches.html">Patches</a></li>
     <li><a href="./Sprites.html">Sprites</a></li>
